Api Rest with RabiitMQ Dockerized, readme Ok, optimize imports OK, new class for createShipment, tested and working
